--- a/index.html
+++ b/index.html
@@ -2,9 +2,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Postobón</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <a href="#">
+        <img src="img/btn-inicio.png" alt="no_carga_mensaje" title="Ir al index" width="40px">
+    </a>
+    <a href="paginas/contactos.html">
+        <img src="img/btn-contacto.png" alt="no_carga_mensaje" title="Ir a contactos" width="40px">
+    </a>
+    <a href="paginas/servicios.html">
+        <img src="img/btn-servicios.png" alt="no_carga_mensaje" title="Ir a servicios" width="40px">
+    </a>
+    <br>
+    <a href="#">
+        <img src="img/postobon.jpg" alt="no_carga_mensaje" width="1000">
+    </a>
+    <br>
+    <h2>
+        ¿Quiénes somos?
+    </h2>
+    <mark>
+        Somos una de las empresas más representativas de Colombia. 
+        Contamos con 120 años de historia en los cuales hemos desarrollado el mercado de bebidas no alcohólicas en el país. 
+        Gracias a eso, somos líderes en volumen y valor en diferentes categorías.
+        Contamos con una operación logística y de distribución altamente eficiente que se articula a una capacidad de producción medida por la demanda. 
+        Día a día llegamos al 90% del territorio nacional atendiendo diferentes canales de ventas en grandes ciudades, municipios y poblaciones rurales alejadas de las cabeceras municipales.
+        Para la producción y distribución de bebidas contamos en Colombia con 71 centros de trabajo, de los cuales, 18 son plantas de fabricación y 53 son centros de distribución.
+    </mark>
+    <br>
+    <em> Hacemos parte constitutiva de la vida de los colombianos al acompañarlos con una oferta de productos para su cotidianidad y para cada momento del día. 
+        Pero más allá del ejercicio competitivo propendemos por el desarrollo de las comunidades y de los espacios donde operamos y lo hacemos bajo una lógica de valor compartido buscando siempre el impacto positivo en la sociedad y en el medioambiente.
+    </em>
+    <br>
+    <small>
+        Trabajamos articulados con otras sociedades de la Organización Ardila Lülle (OAL) para ser una gran plataforma multicategoría y mantener una posición de  liderazgo en el mercado de bebidas no alcohólicas y posiciones relevantes en los mercados de cerveza, maltas, alimentos y café.
+    </small>
     
+    <h2>
+        Bebidas no alcohólicas
+    </h2>
+    <ins>
+        Gaseosas, Aguas, Bebidas con frutas, Bebidas de nueva generación (tes, hidratantes, energizantes, bebidas lácteas y vegetales)
+    </ins>
+    <h2>
+        Alimentos
+    </h2>
+    <ins>
+        Salsas, Sazonadoras, Gelatinas, Bocadillos de Guayaba, Atun enlatado, Avena, Compotas, Snacks
+    </ins>
+    <h2>
+        Bebidas alcohólicas
+    </h2>
+    <del>
+        Cervezas
+    </del>
+    <p> F <sub>(x)</sub> = 2X <sup>3</sup> - 4X </p>
+    <div class="Piedepagina">
+        <p>Página web realizada por Camilo Reyes Rodriguez © 2025</p>
+        <a href="https://www.facebook.com/Postobon">
+            <img src="img/facebook.png" alt="no_carga_mensaje" title="Ir a la pagina de facebook" width="40px">
+        </a>
+        <a href="https://www.instagram.com/postobonempresa/">
+            <img src="img/instagram.png" alt="no_carga_mensaje" title="Ir a la pagina de instagram" width="40px">
+    </div>
+
+
 </body>
 </html>
