--- a/paginas/contactos.html
+++ b/paginas/contactos.html
@@ -8,7 +8,26 @@
     <a href="../index.html">
         <img src="../img/btn-inicio.png" alt="no_carga_mensaje" title="Ir a la pagina principal" width="40px">
     </a>
-    
+    <h3>Formulario basico</h3>
+<div style="width: 100%; background: yellowgreen">
+	<form action="" >
+		<label for=""> Registro</label><br>
+		<input type="number" placeholder="Ingresar número de identificación" style="width: 50%"><br>
+		<input type="text"  placeholder="Ingresar Nombres" style="width: 50%; background: #DAF7A6;" ><br>
+		<input type="text"  placeholder="Ingresar Apellidos" style="width: 50%; background: #DAF7A6;" ><br>
+		<input type="email" placeholder="Ingresar E-mail" style="width: 50%;" > <br>
+
+		<label for="">Ingresa tus credenciales para el acceso al sistema</label> <br>
+		<input type="text" placeholder="Ingresa el Usuario" style="width: 50%;"> <br>
+		<input type="password" placeholder="Ingresa Contraseña" style="width: 50%;"> <br>
+
+		<input type="submit" value="Enviar" style="background-color: rgb(210, 255, 105);">
+
+
+
+
+	</form>
+</div>
     
 </body>
 </html>
